--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     font-size: 1rem;
     border-radius: 5px;
     border: none;
+    cursor: pointer;
   }
 
   .grid {
@@ -108,6 +109,17 @@ img {
     background: #f5f5f5;
     color: #111;
   }
+
+  .input-buttons {
+    transform: scale(2);
+    padding: 0;
+    height: 16px;
+    padding: 3px 2px 7px 2px;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    cursor: pointer;
+  }
 </style>
 </head>
 <body>
@@ -115,7 +127,9 @@ img {
 <header>Tarot Card Explorer</header>
 
 <div class="controls">
+  <span id="random-button" class="input-buttons">🔁</span>
   <input type="text" id="search" placeholder="Search card by name...">
+  <span id="clear-button" class="input-buttons">✖</span>
   <select id="suitFilter">
     <option value="">All Suits</option>
     <option value="Major">Major Arcana</option>
@@ -135,7 +149,7 @@ img {
 <div class="grid" id="cardGrid"></div>
 
 <script>
-    fetch('index.json').then(res => res.json()).then(cards => {
+  fetch('index.json').then(res => res.json()).then(cards => {
 
 let currentDeck = 'rider';
 
@@ -143,7 +157,8 @@ const grid = document.getElementById('cardGrid');
 const searchInput = document.getElementById('search');
 const suitFilter = document.getElementById('suitFilter');
 const deckButtons = document.querySelectorAll('.deck-toggle button');
-
+const randomButton = document.getElementById('random-button');
+const clearButton = document.getElementById('clear-button')
 function renderCards() {
   const query = searchInput.value.toLowerCase();
   const suit = suitFilter.value;
@@ -175,6 +190,16 @@ function renderCards() {
 
 searchInput.addEventListener('input', renderCards);
 suitFilter.addEventListener('change', renderCards);
+randomButton.addEventListener('click', () => {
+  const randomIndex = Math.floor(Math.random() * cards.length);
+  searchInput.value = cards[randomIndex].name
+  renderCards()
+})
+clearButton.addEventListener('click', () => {
+  searchInput.value = ''
+  suitFilter.value = ''
+  renderCards()
+})
 
 deckButtons.forEach(btn => {
   btn.addEventListener('click', () => {
