--- a/pages/c07.html
+++ b/pages/c07.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c07</title>
+    <title>Debauch, the Seven of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -39,6 +39,7 @@ The Wise trust their guts, not their senses</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/thedevil-zgsl6-4xdj3-yf5gd">The Seven of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
