--- a/pages/w09.html
+++ b/pages/w09.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>w09</title>
+    <title>Strength, the Nine of Wands</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -40,6 +40,7 @@ Gave proof through the night that our Flag was still there;</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/thetenofwands-wx3kh-mdy49">The Nine of Wands (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
