--- a/pages/c02.html
+++ b/pages/c02.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c02</title>
+    <title>Love, the Two of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -45,6 +45,7 @@ The End”</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/thestar-bldk7">The Two of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
