--- a/pages/c05.html
+++ b/pages/c05.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c05</title>
+    <title>Disappointment, the Five of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -39,6 +39,7 @@ I told it not, my wrath did grow.</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/fiveofcups">The Five of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
