--- a/pages/c06.html
+++ b/pages/c06.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c06</title>
+    <title>Pleasure, the Six of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -39,6 +39,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/fourofcupts-nbewd-8sbl4-9el59">The Six of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
