--- a/pages/c10.html
+++ b/pages/c10.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c10</title>
+    <title>Satiety, the Ten of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -42,6 +42,7 @@ Bound each to each by natural piety.</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/tenofcups">Ten of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
