--- a/pages/c11.html
+++ b/pages/c11.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c11</title>
+    <title>Page of Cups, Princess of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -33,6 +33,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/tenofcups-apnag-nl6yf-ga33t">Page and Princess of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
