--- a/pages/c14.html
+++ b/pages/c14.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>c14</title>
+    <title>King of Cups, Prince of Cups</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -41,6 +41,7 @@ soft overcoming hard.</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/fourofcupts-nbewd-8sbl4">The King and Prince of Cups (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
