--- a/pages/d11.html
+++ b/pages/d11.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>d11</title>
+    <title>Page/Princess of Disks</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -35,6 +35,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/thetower-hwlw3-yezbp-7nfer">Page and Princess of Disks (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
