--- a/pages/d14.html
+++ b/pages/d14.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>d14</title>
+    <title>King of Disks, Prince of Disks</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -32,6 +32,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/eightofswords-txdrz">King and Prince of Disks (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
