--- a/pages/m00.html
+++ b/pages/m00.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>m00</title>
+    <title>The Fool</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -38,6 +38,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/the-fool">The Fool (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
