--- a/pages/m05.html
+++ b/pages/m05.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>m05</title>
+    <title>Hierophant or Pope</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -34,6 +34,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/thetenofwands-wx3kh">The Hierophant (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
