--- a/pages/m10.html
+++ b/pages/m10.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>m10</title>
+    <title>Wheel of Fortune</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -46,6 +46,7 @@ Osiris: Mercury: Paper: Marry</p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/fourofcupts-nbewd">Wheel of Fortune (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
