--- a/pages/m14.html
+++ b/pages/m14.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>m14</title>
+    <title>Temperance or Art</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -35,6 +35,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/tenofcups-apnag-nl6yf-ga33t-efbhp-p4dnb-gek94">Temperance (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
