--- a/pages/m16.html
+++ b/pages/m16.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>m16</title>
+    <title>The Tower, the House of God</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -42,6 +42,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/thetower">The Tower (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
