--- a/pages/m21.html
+++ b/pages/m21.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>m21</title>
+    <title>The World</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -43,6 +43,7 @@ The Bull is Taurus and Earth</p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/tenofdisks-9flsn-78tfm-an4ms-cgdn6-r24jg">The World (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
