--- a/pages/s01.html
+++ b/pages/s01.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>s01</title>
+    <title>Ace of Swords</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -36,6 +36,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/aceofswords">The Ace of Swords (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
