--- a/pages/s04.html
+++ b/pages/s04.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>s04</title>
+    <title>Truce</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -33,6 +33,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/fourofswords">The Four of Swords (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
