--- a/pages/s06.html
+++ b/pages/s06.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>s06</title>
+    <title>Science</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -34,6 +34,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/tenofdisks-9flsn-78tfm-an4ms-cgdn6-r24jg-gfejg">The Six of Swords (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
