--- a/pages/s09.html
+++ b/pages/s09.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>s09</title>
+    <title>Cruelty, the Nine of Swords</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -35,6 +35,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/tenofdisks-9flsn">The Nine of Swords (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
