--- a/pages/w03.html
+++ b/pages/w03.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>w03</title>
+    <title>The Three of Wands</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -38,6 +38,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/the-magician-z8le7">The Three of Wands (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
