--- a/pages/w06.html
+++ b/pages/w06.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>w06</title>
+    <title>Victory, the Six of Wands</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -40,6 +40,7 @@ So that everything can have a new name</em></p>
 <p>Source: <a href="https://www.tetragrammaton.com/content/sixofwands-meyh5">The Six of Wands (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
