--- a/pages/w14.html
+++ b/pages/w14.html
@@ -3,7 +3,7 @@
   <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>w14</title>
+    <title>King or Prince of Wands</title>
     <link rel="stylesheet" href="style.css">
     <style>
       body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; line-height: 1.6; padding: 0 1rem; }
@@ -33,6 +33,7 @@
 <p>Source: <a href="https://www.tetragrammaton.com/content/thedevil-zgsl6-4xdj3-yf5gd-jwwgb-fkrp4">King of Wands / Prince of Wands (Tarot Triptych) - Tetragrammaton</a></p>
 <hr>
 
+    <script src="relative-nav.js"></script>
   </body>
   </html>
   
